# DemonCore

./: .gitignore  README.md  demonass-0.0.1.vsix  setup.ps1
FPGA/: de0Board.qsf  de0Board.qws  de0Board.vhd
FPGA/db/: .cmp.kpt  add_sub_24e.tdf  altsyncram_2rr3.tdf  altsyncram_m9t3.tdf  altsyncram_pqs3.tdf  altsyncram_t861.tdf  cmpr_ogc.tdf  cntr_6pf.tdf  cntr_p8h.tdf  de0Board.(0).cnf.cdb  de0Board.(0).cnf.hdb  de0Board.(1).cnf.cdb  de0Board.(1).cnf.hdb  de0Board.(10).cnf.cdb  de0Board.(10).cnf.hdb  de0Board.(11).cnf.cdb  de0Board.(11).cnf.hdb  de0Board.(12).cnf.cdb  de0Board.(12).cnf.hdb  de0Board.(13).cnf.cdb  de0Board.(13).cnf.hdb  de0Board.(14).cnf.cdb  de0Board.(14).cnf.hdb  de0Board.(15).cnf.cdb  de0Board.(15).cnf.hdb  de0Board.(16).cnf.cdb  de0Board.(16).cnf.hdb  de0Board.(17).cnf.cdb  de0Board.(17).cnf.hdb  de0Board.(18).cnf.cdb  de0Board.(18).cnf.hdb  de0Board.(19).cnf.cdb  de0Board.(19).cnf.hdb  de0Board.(2).cnf.cdb  de0Board.(2).cnf.hdb  de0Board.(20).cnf.cdb  de0Board.(20).cnf.hdb  de0Board.(21).cnf.cdb  de0Board.(21).cnf.hdb  de0Board.(22).cnf.cdb  (+90 more)
FPGA/memory/: ram10x32.mif  (+1 more)
hardware/: aluTest.gtkw  mulTest.gtkw  pipeline_test.sh  simvision44379.diag  simvision5665.diag  testBench.vhd  xcel_test.sh  xmsim.key
software/: assembler.py
software/assembler/python_parser_package/: README.md  build.ps1  pyproject.toml
software/assembler/python_parser_package/src/demonass_parser/: __main__.py  asm_parser.py  ast_base.py  ast_control.py  ast_exceptions.py  ast_instructions.py  ast_pseudo.py  ast_variables.py  dictionarys.py  grammar.lark  util.py
(+129 files in other folders)
